--- a/source/less/basic/basic.less
+++ b/source/less/basic/basic.less
@@ -2,4 +2,14 @@
 @product-border: #e6e6e6;
 
 //bgr
-@product-hover-bgr: #e6e6e6;
+@product-hover-bgr: #ddd;
+@product-second-bgr: #f9f9f9;
+@form-bgr: #3668f4;
+@submit-disabled-bgr: #f5f2f2;
+@submit-hover-bgr: #bbb;
+@submit-bgr: #d9d9d9;
+@close-btn-hover:#f44336;
+
+//color
+@submit-disabled-clr: #ccc;
+@submit-clr: #555;
