--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,3 +2,8 @@
 @import 'Form/Form';
 @import 'Item/Item';
 @import 'basic/basic';
+@import 'main/main';
+@media (max-width: 1024px) {
+  @import 'mobile/form';
+}
+
