--- a/source/less/App/App.less
+++ b/source/less/App/App.less
@@ -2,6 +2,7 @@
   list-style: none;
   display: flex;
   flex-direction: column;
-  max-width: 300px;
-  margin-bottom: 15px;
+  width: 100%;
+  padding: 0;
+  margin:0;
 }
