--- a/source/less/Item/Item.less
+++ b/source/less/Item/Item.less
@@ -1,23 +1,27 @@
 .Item{
   //display: inline-block;
-  position: relative;
   cursor: pointer;
-  border: 1px solid @product-border;
-  border-radius: 5px;
-  padding: 12px;
-  &:hover{
+  position: relative;
+  padding: 12px 8px 12px 40px;
+  list-style-type: none;
+  background: #eee;
+  font-size: 18px;
+  transition: 0.2s;
+  box-sizing: border-box;
+  &:nth-child(odd) {
+    background: @product-second-bgr;
+  }
+  &:hover {
     background: @product-hover-bgr;
   }
   &__close{
     position: absolute;
-    top: 0;
     right: 0;
-    margin: 10px;
-    border: 1px solid gainsboro;
-    border-radius: 2px;
-    cursor: pointer;
+    top: 0;
+    padding: 12px 16px 12px 16px;
     &:hover{
-      background: gainsboro;
+      background-color: @close-btn-hover;
+      color: white;
     }
   }
   &--alert{
