--- a/source/less/main/main.less
+++ b/source/less/main/main.less
@@ -1,3 +1,19 @@
 body{
   margin: 0;
 }
+.link-box{
+  background-color: @form-bgr;
+  position: absolute;
+  margin-top: 30px;
+  right: 40px;
+  a{
+    font-size: 24px;
+    text-decoration: none;
+    border-bottom: 1px solid #fff;
+    padding: 8px;
+    color: #fff;
+    &:hover{
+      border-bottom: 1px solid transparent;
+    }
+  }
+}
