devel || edit next step for reg

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,6 +3,7 @@
 @import 'Item/Item';
 @import 'basic/basic';
 @import 'main/main';
+@import 'Popup/Popup';
 @media (max-width: 1024px) {
   @import 'mobile/form';
 }
