--- a/public_html/style.css
+++ b/public_html/style.css
@@ -1,1 +1,129 @@
-.product-list{list-style:none;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;width:100%;padding:0;margin:0}.form{background-color:#3668f4;padding:30px 40px;color:#fff;text-align:center}.form__input,.form__submit{padding:10px;float:left;font-size:16px}.form__title{margin:5px 5px 35px}.form__input{border:none;width:75%;border-radius:0}.form__input:focus{border:0}.form__container{display:-webkit-box;display:-ms-flexbox;display:flex}.form__submit{width:25%;background:#d9d9d9;color:#555;text-align:center;cursor:pointer;-webkit-transition:.3s;-o-transition:.3s;transition:.3s;border:0;border-radius:0;-webkit-appearance:none}.form__submit:disabled{background:#f5f2f2;color:#ccc}.form__submit:hover{background-color:#bbb}.Item{cursor:pointer;position:relative;padding:12px 8px 12px 40px;list-style-type:none;background:#eee;font-size:18px;-webkit-transition:.2s;-o-transition:.2s;transition:.2s;-webkit-box-sizing:border-box;box-sizing:border-box}.Item:nth-child(odd){background:#f9f9f9}.Item:hover{background:#ddd}.Item__close{position:absolute;right:0;top:0;padding:12px 16px}.Item__close:hover{background-color:#f44336;color:#fff}.Item--alert{background:#f66}body{margin:0}.link-box{background-color:#3668f4;position:absolute;margin-top:30px;right:40px}.link-box a{font-size:24px;text-decoration:none;border-bottom:1px solid #fff;padding:8px;color:#fff}.link-box a:hover{border-bottom:1px solid transparent}.Popup--error{color:red}@media (max-width:1024px){.form{padding:30px 0}.form__title{text-align:left}.link-box{margin-top:35px;right:0}.link-box a:hover{border-bottom:1px solid #fff}}
+.product-list {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+.form {
+  background-color: #3668f4;
+  padding: 30px 40px;
+  color: white;
+  text-align: center;
+}
+.form__title {
+  margin: 5px;
+  margin-bottom: 35px;
+}
+.form__input {
+  border: none;
+  width: 75%;
+  padding: 10px;
+  float: left;
+  font-size: 16px;
+  border-radius: 0;
+}
+.form__input:focus {
+  border: 0;
+}
+.form__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.form__submit {
+  padding: 10px;
+  width: 25%;
+  background: #d9d9d9;
+  color: #555;
+  float: left;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  border: 0;
+  border-radius: 0;
+  -webkit-appearance: none;
+}
+.form__submit:disabled {
+  background: #f5f2f2;
+  color: #ccc;
+}
+.form__submit:hover {
+  background-color: #bbb;
+}
+.Item {
+  cursor: pointer;
+  position: relative;
+  padding: 12px 8px 12px 40px;
+  list-style-type: none;
+  background: #eee;
+  font-size: 18px;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.Item:nth-child(odd) {
+  background: #f9f9f9;
+}
+.Item:hover {
+  background: #ddd;
+}
+.Item__close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 12px 16px 12px 16px;
+}
+.Item__close:hover {
+  background-color: #f44336;
+  color: white;
+}
+.Item--alert {
+  background: #ff6666;
+}
+body {
+  margin: 0;
+}
+.link-box {
+  background-color: #3668f4;
+  position: absolute;
+  margin-top: 30px;
+  right: 40px;
+}
+.link-box a {
+  font-size: 24px;
+  text-decoration: none;
+  border-bottom: 1px solid #fff;
+  padding: 8px;
+  color: #fff;
+}
+.link-box a:hover {
+  border-bottom: 1px solid transparent;
+}
+.Popup--error {
+  color: red;
+}
+@media (max-width: 1024px) {
+  .form {
+    padding: 30px 0;
+  }
+  .form__title {
+    text-align: left;
+  }
+  .link-box {
+    margin-top: 35px;
+    right: 0;
+  }
+  .link-box a:hover {
+    border-bottom: 1px solid #fff;
+  }
+}
